# exerciser

./: .gitignore  README.md  exercise1.py  exercise1_solution.ipynb  exercise1_solution.py  lab1.py  lab1_solution.ipynb  pyproject.toml  pyrightconfig.json  requirements-exercises.txt  vermin-check-compat.bat
exerciser/: __init__.py  _execute_gui.py  _graph_plotter.py  _shared.py  execute_gui.py  graph_plotter.py  matplotlib.py  pygame.py  shared.py
